; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-tcp-shutdown-after-write.c_close_cb.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-tcp-shutdown-after-write.c_close_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@conn = common dso_local global i32 0, align 4
@conn_close_cb_called = common dso_local global i32 0, align 4
@timer = common dso_local global i32 0, align 4
@timer_close_cb_called = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @close_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @close_cb(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = icmp eq i32* %3, @conn
  br i1 %4, label %5, label %8

5:                                                ; preds = %1
  %6 = load i32, i32* @conn_close_cb_called, align 4
  %7 = add nsw i32 %6, 1
  store i32 %7, i32* @conn_close_cb_called, align 4
  br label %17

8:                                                ; preds = %1
  %9 = load i32*, i32** %2, align 8
  %10 = icmp eq i32* %9, @timer
  br i1 %10, label %11, label %14

11:                                               ; preds = %8
  %12 = load i32, i32* @timer_close_cb_called, align 4
  %13 = add nsw i32 %12, 1
  store i32 %13, i32* @timer_close_cb_called, align 4
  br label %16

14:                                               ; preds = %8
  %15 = call i32 @ASSERT(i32 0)
  br label %16

16:                                               ; preds = %14, %11
  br label %17

17:                                               ; preds = %16, %5
  ret void
}

declare dso_local i32 @ASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
